Scrollbars fix added
Overflow hidden, gets rid of scroll bars

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 body
 {
+    overflow: hidden;
     margin: 0;
     height: 100vh;
     background-color: #13171c;
